crates/php-parser/tests/snapshots/nikic_stmt_tests__nikic_stmt_class_readonlyanonyous.snap
---
source: crates/php-parser/tests/nikic_stmt_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "New": {
              "class": {
                "kind": {
                  "AnonymousClass": {
                    "name": null,
                    "modifiers": {
                      "is_abstract": false,
                      "is_final": false,
                      "is_readonly": true
                    },
                    "extends": null,
                    "implements": [],
                    "members": [],
                    "attributes": []
                  }
                },
                "span": {
                  "start": 7,
                  "end": 28
                }
              },
              "args": []
            }
          },
          "span": {
            "start": 7,
            "end": 28
          }
        }
      },
      "span": {
        "start": 7,
        "end": 29
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 29
  }
}
